changed the pom.xml file to convert project into SpringBoot project,refactored code in Main class and added tests to CarBookingTest to cover more methods